# student-wolfsound-academy

./: README.md  gitignore
dsp-pro/: CMakeLists.txt  README.md
dsp-pro/bandpass_plugin/: CMakeLists.txt
dsp-pro/cmake/: cpm.cmake
dsp-pro/test/: CMakeLists.txt
dsp-pro/test/source/bandpass_plugin/: AudioProcessorTest.cpp
juce-audio-plugin-development/: README.md
